fixing alignment issues

--- a/resources/css/Sass/Components/_buttons.scss
+++ b/resources/css/Sass/Components/_buttons.scss
@@ -41,6 +41,10 @@
   color: #fff;
   border-radius: 27px;
 }
+.btn-signup:hover{
+  border-color: #3F64AD;
+  border-radius: 27px;
+}
 
 //Side chat button
 .chat-btn{
