--- a/resources/css/Sass/Utilities/_global.scss
+++ b/resources/css/Sass/Utilities/_global.scss
@@ -74,12 +74,3 @@ font-weight: 700;
 text-decoration: none;
 }
 
-@media only screen and (max-width: $breakpoint-sm) { 
-
-  section {
-    margin: 2.5rem 0 2.5rem 0;
-  }
-
-  
-
-}
