--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -19,7 +19,7 @@ body {
 .hero-section {
   background: url(https://image.dream.snhu.edu/lib/fe9213737461067576/m/1/8caf6884-58e8-4cba-88c0-9e3f58991112.gif);
   background-size: cover;
-  height: 35vh;
+  // height: 50vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -31,15 +31,17 @@ body {
 
 .icon-vid {
   position: absolute;
-  bottom: -3rem;
-  left: 9rem;
+  bottom: 0;
   z-index: 3;
+  left: 50%;
+  transform: translate(-50%, 50%);
 }
 
 iframe.vidyard_iframe {
   position: absolute;
-  top: 4px;
-  left: 78px;
+  top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   height: 28.5rem;
   width: 16rem;
   border-radius: 24px;
@@ -85,8 +87,42 @@ position: relative;
     font-weight: 700;
 }
   
+@media (max-width: 1440px) {
  
-  
+}
+ 
+@media (max-width: 768px) {
+ .vid-pad {
+padding: 5rem;
+ }
+
+  .image-vid-container.position-relative {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+  .major-img {
+    width: 100%;
+  }
+
+ 
+
+h1{
+  font-size: 3rem;
+}
+
+.hero-section {
+  padding: 1rem;
+  height: auto;
+}
+
+section {
+  padding: 0;
+}
+}
   
  
   
